# llm-service

./: .dockerignore  .gitignore  Dockerfile.api  README.md  database.py  docker-compose.yaml  logger.py  main.py  pyproject.toml
chat_agent/: agent.py  system_prompt.txt
chat_agent/utils/: __init__.py  retrieved_tool_description.txt  structured_output.py  tools.py  vectorstore.py
dependencies/: agent.py  database.py
